<?xml version="1.0" encoding="utf-8"?>
<!--
/*******************************************************************************
* Copyright (c) 2014-2015 IBM Corp.
*
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Eclipse Public License v1.0
* and Eclipse Distribution License v1.0 which accompany this distribution.
*
* The Eclipse Public License is available at
*   http://www.eclipse.org/legal/epl-v10.html
* and the Eclipse Distribution License is available at
*   http://www.eclipse.org/org/documents/edl-v10.php.
*
* Contributors:
*    Mike Robertson - initial contribution
*******************************************************************************/
-->
<resources>
    <string name="app_name">Solace Connected Car Sensor</string>
    <string name="action_settings">Settings</string>

    <!-- Generic Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Error messages -->
    <string name="broker_unavailable_check_connectivity">Server is unavailable. Please check your connectivity and try again</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>

    <!-- Menu Actions -->
    <string name="login_label">LOGIN</string>
    <string name="iot_label">IOT</string>
    <string name="log_label">LOG</string>
    <string name="accel_label">Toggle Accel</string>
    <string name="home_label">Open Home</string>
    <string name="profiles_label">Open Profiles</string>
    <string name="web_label">Open Quickstart</string>
    <string name="clear_profiles_label">Clear Profiles</string>
    <string name="reset_label">Reset</string>
    <string name="clear_log_label">Clear Log</string>
    <string name="tutorial_label">Open Tutorial</string>

    <!-- Begin Login Fragment -->
    <string name="showToken_button">Show Password</string>
    <string name="hideToken_button">Hide Password</string>
    <string name="useSSL_button">Use SSL</string>
    <string name="activate_button">Activate Sensor</string>
    <string name="deactivate_button">Deactivate Sensor</string>

    <string name="device_id">User Name: -</string>
    <string name="is_connected">Connected to Solace: No</string>
    <string name="g_level">G Level in M/S: </string>
    <string name="VIN">VIN: </string>

    <string name="organization_hint">Router IP:Port</string>
    <string name="device_id_hint">User Name</string>
    <string name="g_level_hint">Acceleration in M/S to trigger crash notification</string>
    <string name="channel_name">Crash Notification Name</string>
    <string name="channel_description">Crash Notification Description</string>
    <string name="auth_token_hint">Password</string>
    <!-- End Login Fragment -->

    <!-- Begin IoT Fragment -->
    <string name="accel_info">Crash Accelerometer Data</string>
    <string name="accel_x">x: 0.0</string>
    <string name="accel_y">y: 0.0</string>
    <string name="accel_z">z: 0.0</string>
    <string name="messages_published">Messages Published: 0</string>
    <string name="messages_received">Messages Received: 0</string>
    <string name="vin_iot">VIN: </string>
    <string name="device_id_vin_value">1234567890123456789</string>
    <string name="send_text">Send Chat</string>
    <!-- End IoT Fragment -->

    <!-- Begin Settings Activity -->
    <string name="organization_setting">Router IP: </string>
    <string name="device_id_setting">User Name: </string>
    <string name="g_level_setting">G Level in M/S: </string>
    <string name="VIN_setting">VIN: </string>
    <string name="auth_token_setting">Password: </string>

    <string name="organization_value">Router IP</string>
    <string name="device_id_value">User Name</string>
    <string name="g_level_value">33.0</string>
    <string name="vin_value">1234567890123456789</string>
    <string name="auth_token_value">Password</string>

    <string name="save_button">Save Settings</string>

    <!-- End Settings Activity -->

    <!-- Profiles activity dialog -->
    <string name="save_dialog_title">Save Profile</string>
    <string name="save_dialog_text">Enter a name for the profile.</string>
    <string name="save_dialog_ok">Save</string>

    <string name="profile_exists_title">Profile Name Exists</string>
    <string name="profile_exists_text">The profile name you have entered already exists. Overwrite?</string>
    <!-- End Properties activity dialog -->

    <string name="alert_dialog_title">Received Alert</string>

    <!-- IoT Fragment dialog -->
    <string name="send_text_title">Send Chat Message</string>
    <string name="send_text_text">Input message text to send.</string>
    <string name="send_text_invalid">Text messages are disabled while connected to QuickStart.</string>
    <!-- End IoT Fragment dialog -->

    <!-- Login Fragment dialog -->
    <string name="connect_props_title">Unable to connect</string>
    <string name="connect_props_text">Router IP, User Name and Password must be set and various Android permissions must be granted in order to connect.</string>
    <!-- End Login Fragment dialog -->

    <!-- Tutorial Strings -->
    <string name="skip_tutorial_label">Skip Tutorial</string>
    <string name="finish_tutorial_label">Lets get started...</string>
    <string name="swipe_tutorial_label">Swipe to continue</string>
    <string name="tutorial_pageA_title">Welcome to the Solace Connected Car Controller App</string>
    <string name="tutorial_pageA_text">The Solace Connected Car Controller App is designed to demonstrate the power of Solace messaging for connecting cars.</string>
    <string name="tutorial_pageB_title">How it works</string>
    <string name="tutorial_pageB_text">The app connects to a Solace router running in our lab.\nA Sensor app running on a second phone connects to the same server.\nThe Sensor app simulates a connected car and responds to messages from and sends messages to the Controller app in real time using MQTT.</string>
    <string name="tutorial_pageC_title">What to do</string>
    <string name="tutorial_pageC1_title">Connect the Controller to our Lab</string>
    <string name="tutorial_pageC1_text">The required connection settings are prepopulated, don\'t change them unless requested: Press \'Activate Controller\'.</string>
    <string name="tutorial_pageC2_title">Operate the Sensor</string>
    <string name="tutorial_pageC2_text">Using the controls on the Controller app, operate the sensor.  Try starting the engine, sounding the horn, turning on the lights, locking the door or changing the car \'ambience\'.</string>
    <!--string name="tutorial_pageC2_text">Step 1: Enter your IoT organization ID\nStep 2: Enter your device ID\nStep 3: Enter your Authorization Token</string-->
    <!-- End Tutorial Strings -->
</resources>
