<?xml version="1.0" encoding="utf-8"?>
<!--
/*******************************************************************************
* Copyright (c) 2014-2015 IBM Corp.
*
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Eclipse Public License v1.0
* and Eclipse Distribution License v1.0 which accompany this distribution.
*
* The Eclipse Public License is available at
*   http://www.eclipse.org/legal/epl-v10.html
* and the Eclipse Distribution License is available at
*   http://www.eclipse.org/org/documents/edl-v10.php.
*
* Contributors:
*    Mike Robertson - initial contribution
*    David Wray - updated for Solace CarDemo
*******************************************************************************/
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/ActivityBackground"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.solace.labs.cardemo.sensor.fragments.IoTPagerFragment"
        >

    <com.solace.labs.cardemo.sensor.views.DrawingView
        android:id="@+id/drawing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.solace.labs.cardemo.sensor.views.DrawingView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vin_iot"
                android:id="@+id/deviceIDSettingIoT"
                />
        <View android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1" />
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_id_vin_value"
                android:id="@+id/VINIoT"
                />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
        android:gravity="center|bottom"
                  android:orientation="vertical">
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accel_info"
                android:id="@+id/accelInfo"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accel_x"
                android:id="@+id/accelX"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accel_y"
                android:id="@+id/accelY"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accel_z"
                android:id="@+id/accelZ"
                />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:paddingTop="16dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/messages_published"
                android:id="@+id/messagesPublishedView"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/messages_received"
                android:id="@+id/messagesReceivedView"
                />

        <Button
            android:id="@+id/sendText"
            style="@style/BottomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_text"
            android:visibility="gone" />
    </LinearLayout>

    <Switch
        android:id="@+id/switchLocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="Lock"
        android:textOff="Unlocked"
        android:textOn="Locked"
        android:layout_below="@+id/button_reset"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:text="@string/reset_label" />

</RelativeLayout>